// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwatchList component should be able to change pages 1`] = `
<View
  style={Object {}}
>
  <ListView
    contentOffset={
      Object {
        "x": 0,
      }
    }
    dataSource={
      Object {
        "_data": Array [
          <View
            onLayout={[Function]}
      >
            <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
            >
                  One
            </Text>
      </View>,
          <View
            onLayout={[Function]}
      >
            <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
            >
                  Two
            </Text>
      </View>,
        ],
        "getRowCount": [Function],
      }
    }
    enableEmptySections={true}
    horizontal={true}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    pagingEnabled={true}
    renderRow={[Function]}
    scrollEnabled={undefined}
    showsHorizontalScrollIndicator={false}
    snapToInterval={1}
    style={Object {}}
  >
    <View
      onLayout={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        One
      </Text>
    </View>
    <View
      onLayout={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Two
      </Text>
    </View>
  </ListView>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 0,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "paddingHorizontal": 8,
          "paddingTop": 8,
        },
        Object {
          "justifyContent": "center",
        },
        Object {},
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#D0D3D4",
            "borderRadius": 5,
            "marginBottom": 8,
            "marginRight": 8,
          },
          Object {
            "height": 10,
            "width": 10,
          },
          Object {
            "backgroundColor": "#63666A",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#D0D3D4",
            "borderRadius": 5,
            "marginBottom": 8,
            "marginRight": 8,
          },
          Object {
            "height": 10,
            "width": 10,
          },
          Object {},
        ]
      }
    />
  </View>
</View>
`;

exports[`SwatchList component should render a Pager with View children 1`] = `
<View
  style={Object {}}
>
  <ListView
    contentOffset={
      Object {
        "x": 0,
      }
    }
    dataSource={
      Object {
        "_data": Array [
          <View
            onLayout={[Function]}
      >
            <View>
                  <Text
                        accessible={true}
                        allowFontScaling={true}
                        disabled={false}
                        ellipsizeMode="tail"
                  >
                        One
                  </Text>
            </View>
      </View>,
          <View
            onLayout={[Function]}
      >
            <View>
                  <Text
                        accessible={true}
                        allowFontScaling={true}
                        disabled={false}
                        ellipsizeMode="tail"
                  >
                        Two
                  </Text>
            </View>
      </View>,
        ],
        "getRowCount": [Function],
      }
    }
    enableEmptySections={true}
    horizontal={true}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    pagingEnabled={true}
    renderRow={[Function]}
    scrollEnabled={undefined}
    showsHorizontalScrollIndicator={false}
    snapToInterval={1}
    style={Object {}}
  >
    <View
      onLayout={[Function]}
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        >
          One
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        >
          Two
        </Text>
      </View>
    </View>
  </ListView>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 0,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "paddingHorizontal": 8,
          "paddingTop": 8,
        },
        Object {
          "justifyContent": "center",
        },
        Object {},
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#D0D3D4",
            "borderRadius": 5,
            "marginBottom": 8,
            "marginRight": 8,
          },
          Object {
            "height": 10,
            "width": 10,
          },
          Object {
            "backgroundColor": "#63666A",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#D0D3D4",
            "borderRadius": 5,
            "marginBottom": 8,
            "marginRight": 8,
          },
          Object {
            "height": 10,
            "width": 10,
          },
          Object {},
        ]
      }
    />
  </View>
</View>
`;

exports[`SwatchList component should render a Pager with default props 1`] = `
<View
  style={Object {}}
>
  <ListView
    contentOffset={
      Object {
        "x": 0,
      }
    }
    dataSource={
      Object {
        "_data": Array [
          <View
            onLayout={[Function]}
      >
            <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
            >
                  One
            </Text>
      </View>,
          <View
            onLayout={[Function]}
      >
            <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
            >
                  Two
            </Text>
      </View>,
        ],
        "getRowCount": [Function],
      }
    }
    enableEmptySections={true}
    horizontal={true}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    pagingEnabled={true}
    renderRow={[Function]}
    scrollEnabled={undefined}
    showsHorizontalScrollIndicator={false}
    snapToInterval={1}
    style={Object {}}
  >
    <View
      onLayout={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        One
      </Text>
    </View>
    <View
      onLayout={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Two
      </Text>
    </View>
  </ListView>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 0,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "paddingHorizontal": 8,
          "paddingTop": 8,
        },
        Object {
          "justifyContent": "center",
        },
        Object {},
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#D0D3D4",
            "borderRadius": 5,
            "marginBottom": 8,
            "marginRight": 8,
          },
          Object {
            "height": 10,
            "width": 10,
          },
          Object {
            "backgroundColor": "#63666A",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#D0D3D4",
            "borderRadius": 5,
            "marginBottom": 8,
            "marginRight": 8,
          },
          Object {
            "height": 10,
            "width": 10,
          },
          Object {},
        ]
      }
    />
  </View>
</View>
`;
